--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -1,22 +1,68 @@
 body {
   background-color: blue;
+  height: 100vh;
+  width: 100vw;
 }
 h1 {
   background-color: red;
   color: red;
 }
-.pokemon_info {
+.pokémon_info {
   background-color: yellow;
   text-align: center;
+  width: 800px;
+  margin: 40px auto 0 auto;
+  border-style: solid;
+  border-color: red;
 }
 form {
   text-align: center;
 }
 .banner {
   text-align: center;
-  width: 100vw;
+  width: 100%;
   height: 200px;
 }
 img {
   height: 300px;
+}
+button {
+  margin-left: 47%;
+  margin-top: 50px;
+}
+#modal {
+	background-color: rgba(0,0,0,0.4);
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
+	overflow: auto;
+  display: none;
+}
+#modal-box {
+	background-color: white;
+	height: 350px;
+	width: 550px;
+	border-radius: 2px;
+	margin: 150px auto;
+  padding: 5%;
+  line-height: 120%;
+  font-family: serif;
+}
+.modal-buttons {
+  padding: 10px 10px;
+	background-color: #FFFF00;
+	border-radius: 10px;
+	color: blue;
+	font-family: serif;
+  font-weight: bold;
+	cursor: grab;
+}
+#modal-footer {
+  text-align: right;
+}
+#close {
+  text-decoration: none;
 }
