--- a/Auto_Shop/public/css/style.css
+++ b/Auto_Shop/public/css/style.css
@@ -8,4 +8,65 @@ header {
 
 h1 {
   text-align: center;
+  color: yellow;
+  font-family: 'Faster One', cursive;
+}
+
+h4 {
+  text-align: center;
+}
+
+nav {
+  background: purple;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  font-family: 'Faster One', cursive;
+}
+
+.new {
+  text-align: center;
+}
+
+.welcome {
+  background: url("https://pbs.twimg.com/media/C5tREVBU8AA7sZH.jpg");
+  background-size: cover;
+  background-position: center;
+  padding: 350px;
+  font-family: 'Faster One', cursive;
+}
+
+.enter {
+  text-align: center;
+}
+
+.big-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+/* .flex-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+} */
+
+.banner {
+  background: url("https://ricardoe30.files.wordpress.com/2010/12/cropped-e30-banner1.jpg");
+  text-align: center;
+  margin: 0 auto;
+  padding: 100px;
+  background-size: cover;
+  background-position: center;
+  font-family: 'Faster One', cursive;
+}
+
+footer {
+  text-align: center;
+  background: purple;
+  color: white;
+  padding: 10px;
 }
