--- a/Auto_Shop/views/edit.ejs
+++ b/Auto_Shop/views/edit.ejs
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="../css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Faster+One&display=swap" rel="stylesheet">
         <title>Edit Page</title>
     </head>
     <body>
+      <header>
+        <div class="banner">
+        <h1>Retro Auto Parts</h1>
+        </div>
+      </header>
+      <nav>
+        <a href="/parts/new">Request New Part</a>
+        <a href="/parts">Back to Index</a>
+        <a href="#">Contact</a>
+        <a href="#">About</a>
+      </nav>
       <h1>Edit Part Page</h1>
       <form action="/parts/<%=id%>?_method=PUT" method="POST">
           Name: <input type="text" name="name" value="<%=part.name%>"/><br/>
@@ -14,5 +29,8 @@
           Quantity: <input type="number" name="quantity" value="<%=part.qty%>"/><br/>
           <input type="submit" value="Edit Part"/>
       </form>
+      <footer>
+        <p>Thanks for visiting Retro Auto Parts!</p>
+      </footer>
     </body>
 </html>
