--- a/Auto_Shop/views/show.ejs
+++ b/Auto_Shop/views/show.ejs
@@ -2,9 +2,24 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Faster+One&display=swap" rel="stylesheet">
     <title>Show Page</title>
   </head>
   <body>
+    <header>
+      <div class="banner">
+      <h1>Retro Auto Parts</h1>
+      </div>
+    </header>
+    <nav>
+      <a href="/parts/new">Request New Part</a>
+      <a href="/parts">Back to Index</a>
+      <a href="#">Contact</a>
+      <a href="#">About</a>
+    </nav>
     <h1>Part Show Page</h1>
     <p>
       <img src="<%=part.img%>" width="300" height="300">
@@ -15,18 +30,13 @@
       <br>
       <%=part.qty%>
     </p>
-    <button type="button" name="buy">Buy</button>
-    <br>
-    <a href="/parts/<%=id%>/edit">Edit</a>
-    <br>
-    <form action="/parts/<%=id%>?_method=DELETE" method="POST">
-      <input type="submit" value="DELETE"/>
+    <button type="button" name="buy">BUY</button>
+    <form action="/parts/<%=id%>/edit"><input type="submit" value="EDIT"/></form>
+    <form action="/parts/<%=id%>?_method=DELETE" method="POST"><input type="submit" value="DELETE"/>
     </form>
-    <br>
-    <nav>
-      <a href="/parts/new">Request New Part</a>
-    </nav>
-    <br>
-    <a href="/parts">Back to Index</a>
+
+    <footer>
+      <p>Thanks for visiting Retro Auto Parts!</p>
+    </footer>
   </body>
 </html>
