--- a/Auto_Shop/views/about.ejs
+++ b/Auto_Shop/views/about.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Faster+One&display=swap" rel="stylesheet">
 
-    <title>Index Page</title>
+    <title>About</title>
   </head>
   <body>
     <header>
@@ -16,23 +16,13 @@
       </div>
     </header>
     <nav>
+      <a href="/parts">Back to Index</a>
       <a href="/parts/new">Request New Part</a>
-      <a href="/about">About</a>
     </nav>
-    <h1>Parts Index</h1>
-    <div class="big-container">
-      <% for (let i=0; i < allParts.length; i++) { %>
-      <div class="flex-container">
-        <a href="/parts/<%=i%>"><img src="<%=allParts[i].img%>" width="200" height="200"></a>
-        <br>
-        <h4><%=allParts[i].name%></h4>
-        <br>
-      </div>
-      <% } %>
-      <footer>
-        <p>Thanks for visiting Retro Auto Parts!</p>
-      </footer>
-    </div>
-
+    <h1>About Retro Auto Parts</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <footer>
+      <p>Thanks for visiting Retro Auto Parts!</p>
+    </footer>
   </body>
 </html>
