--- a/Auto_Shop/views/new.ejs
+++ b/Auto_Shop/views/new.ejs
@@ -11,14 +11,12 @@
     <body>
       <header>
         <div class="banner">
-        <h1>Retro Auto Parts</h1>
+          <h1>Retro Auto Parts</h1>
         </div>
       </header>
       <nav>
-        <a href="/parts/new">Request New Part</a>
         <a href="/parts">Back to Index</a>
-        <a href="#">Contact</a>
-        <a href="#">About</a>
+        <a href="/about">About</a>
       </nav>
       <h1>New Part Request Page</h1>
       <div class="new">
@@ -26,9 +24,9 @@
           Name: <input type="text" name="name" /><br/>
           Description: <input type="text" name="description" /><br/>
           <!-- //Image: <input type="text" name="image" /><br/>// -->
-          Price: <input type="number" name="price" /><br/>
+          Vehicle: <input type="number" name="price" /><br/>
           Quantity: <input type="number" name="quantity" /><br/>
-          <input type="submit" name="" value="Request Part"/>
+          <input id="new" type="submit" name="" value="Request Part"/>
       </form>
       </div>
       <footer>
