--- a/Auto_Shop/views/show.ejs
+++ b/Auto_Shop/views/show.ejs
@@ -11,13 +11,11 @@
   <body>
     <header>
       <div class="banner">
-      <h1>Retro Auto Parts</h1>
+        <h1>Retro Auto Parts</h1>
       </div>
     </header>
     <nav>
-      <a href="/parts/new">Request New Part</a>
       <a href="/parts">Back to Index</a>
-      <a href="#">Contact</a>
       <a href="#">About</a>
     </nav>
     <h1>Part Show Page</h1>
@@ -31,9 +29,9 @@
       <%=part.qty%>
     </p>
     <button type="button" name="buy">BUY</button>
+    <form action="/parts/new"><input type="submit" value="REQUEST NEW PART"/></form>
     <form action="/parts/<%=id%>/edit"><input type="submit" value="EDIT"/></form>
-    <form action="/parts/<%=id%>?_method=DELETE" method="POST"><input type="submit" value="DELETE"/>
-    </form>
+    <form action="/parts/<%=id%>?_method=DELETE" method="POST"><input type="submit" value="DELETE"/></form>
 
     <footer>
       <p>Thanks for visiting Retro Auto Parts!</p>
